slim down the agent configuration for the release-rebuild